Reformat to resolve most Checkstyle warnings